--- a/boostr-obi-html.html
+++ b/boostr-obi-html.html
@@ -22,7 +22,6 @@
      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
           <!-- Navbar -->
-          
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Obi's Thundermail</a>
@@ -99,15 +98,16 @@
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</div>
 </div>
 
+<!--Boss Div-->
 <div class="col-lg-6 col-md-12 col">
-<h3>Subject: Email</h3>
+<h3>Subject: Email From Boss</h3>
 <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
     Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 
     <div><input class="compose-field" type="text"/></div>
 
-    <div class="send-button"><button>Send</button></div>
+    <div class="reply-button"><button>Reply</button></div>
 </div>
 
 
