--- a/boostr-obi-html.html
+++ b/boostr-obi-html.html
@@ -16,11 +16,6 @@
 
 </head>
 <body>
-    
-    <!-- bootstrap java cdn -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
           <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -50,7 +45,7 @@
         <!-- Hamburger Nav Bar-->
       <div class="collapse" id="navbarToggleExternalContent">
         <div class="bg-dark p-4">
-          <h5 class="text-white h4">Collapsed content</h5>
+          <h5 class="text-white h4">THANKS FOR CLICKING MY BURGER!!!</h5>
           <span class="text-body-secondary">Toggleable via the navbar brand.</span>
         </div>
       </div>
@@ -75,19 +70,23 @@
                 <div class="row">
 <div class="col-lg-2 col-md-4 d-none d-md-block col">
 
-    <!--mobile -->
+    <!--Compose Button -->
    <div><button class="compose-button">Compose</button></div>
 
-<div><strong>Inbox (1)</strong></div>
-<div>Sent</div>
-<div>Draft</div>
-<div>Spam</div>
-<div>Trash</div>
+<div class="inbox"><strong>Inbox (1)</strong></div>
+<div class="sent">Sent</div>
+<div class="draft">Draft</div>
+<div class="spam">Spam</div>
+<div class="trash">Trash</div>
 </div>
 
-<!--mobile cont.-->
+<!--Mobile-->
 <div class="col-lg-4 col-md-8 col-12 col">
-<div class="search-bar-center"><input class="search-bar" type="text" placeholder="Search"/></div> 
+
+    <!--Search Bar-->
+<div class="search-bar-center"><input class="search-bar" type="text" placeholder="Search Inbox"/></div> 
+
+<!--Email Col-->
 <div class="boss"><h4>boss@bossmail.com</h4>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</div><br>
     <div class="dad"><h4>dad@dadmail.com</h4>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
@@ -107,6 +106,7 @@
 
     <div><input class="compose-field" type="text"/></div>
 
+    <!--Reply Button-->
     <div class="reply-button"><button>Reply</button></div>
 </div>
 
@@ -116,5 +116,10 @@
 
 
     </div>
+        
+    <!-- bootstrap java Script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
 </body>
 </html>
